fix: improvement update user by user