@@ -39,97 +39,94 @@ public class UtilisateurController {
      */
     @GetMapping("/me")
     public ResponseEntity<?> getMyProfile() {
-        // Récupération de l'email de l'utilisateur depuis le contexte de sécurité
         Authentication auth = SecurityContextHolder.getContext().getAuthentication();
         String email = auth.getName();
 
-        Optional<Utilisateur> utilisateurOpt = utilisateurService.findByEmail(email);
-        if (utilisateurOpt.isPresent()) {
-            Utilisateur user = utilisateurOpt.get();
-            UtilisateurDTO dto = new UtilisateurDTO();
-            dto.setId(user.getId());
-            dto.setEmail(user.getEmail());
-            dto.setUsername(user.getUsername());
-            // On n'expose pas le mot de passe pour des raisons de sécurité
-            return ResponseEntity.ok(dto);
-        } else {
+        Optional<Utilisateur> opt = utilisateurService.findByEmail(email);
+        if (opt.isEmpty()) {
             return ResponseEntity.status(HttpStatus.NOT_FOUND)
                     .body("Utilisateur non trouvé.");
         }
+        Utilisateur user = opt.get();
+        UtilisateurDTO dto = new UtilisateurDTO();
+        dto.setId(user.getId());
+        dto.setEmail(user.getEmail());
+        dto.setUsername(user.getUsername());
+        // Mot de passe volontairement non exposé
+        return ResponseEntity.ok(dto);
     }
 
     /**
      * Permet à l'utilisateur connecté de mettre à jour son profil.
-     * L'utilisateur peut modifier son email, son nom d'utilisateur et
-     * changer son mot de passe à condition de fournir l'ancien.
+     * L'utilisateur peut changer email/username, et *optionnellement* son mot de passe.
+     * Si newPassword est fourni, currentPassword devient obligatoire.
      */
     @PutMapping("/me")
     public ResponseEntity<?> updateMyProfile(
             @Valid @RequestBody UpdateProfileDTO dto) {
-        // Récupération de l'utilisateur connecté depuis le token
+
+        // Récupération de l'utilisateur depuis le token
         Authentication auth = SecurityContextHolder.getContext().getAuthentication();
         String email = auth.getName();
 
-        Optional<Utilisateur> utilisateurOpt = utilisateurService.findByEmail(email);
-        if (utilisateurOpt.isEmpty()) {
+        Optional<Utilisateur> opt = utilisateurService.findByEmail(email);
+        if (opt.isEmpty()) {
             return ResponseEntity.status(HttpStatus.NOT_FOUND)
                     .body("Utilisateur non trouvé.");
         }
-        Utilisateur user = utilisateurOpt.get();
+        Utilisateur user = opt.get();
 
-        // Mise à jour des informations autorisées
+        // 1) Mise à jour email & username
         user.setEmail(dto.getEmail());
         user.setUsername(dto.getUsername());
 
-        // Si un nouveau mot de passe est fourni, on le vérifie et on le met à jour
-        if (dto.getNewPassword() != null && !dto.getNewPassword().trim().isEmpty()) {
-            // L'ancien mot de passe doit être présent
-            if (dto.getCurrentPassword() == null || dto.getCurrentPassword().trim().isEmpty()) {
-                return ResponseEntity
-                        .badRequest()
-                        .body("Vous devez fournir votre mot de passe actuel pour le changer.");
+        // 2) Si l'on veut changer le mot de passe...
+        if (dto.getNewPassword() != null && !dto.getNewPassword().isBlank()) {
+
+            // 2a) L'ancien mot de passe doit être fourni
+            if (dto.getCurrentPassword() == null || dto.getCurrentPassword().isBlank()) {
+                return ResponseEntity.badRequest()
+                        .body("Vous devez fournir votre mot de passe actuel.");
             }
-            // Vérification de l'ancien mot de passe
+            // 2b) Vérification de l'ancien mot de passe
             if (!passwordEncoder.matches(dto.getCurrentPassword(), user.getPassword())) {
-                return ResponseEntity
-                        .status(HttpStatus.BAD_REQUEST)
+                return ResponseEntity.status(HttpStatus.BAD_REQUEST)
                         .body("Mot de passe actuel incorrect.");
             }
-            // On encode et on assigne le nouveau mot de passe
+            // 2c) On encode et on assigne le nouveau mot de passe
             user.setPassword(dto.getNewPassword());
         }
+        // Sinon, si newPassword est vide, on ne touche pas au password
 
-        // Mise à jour de l'utilisateur grâce au service
-        Utilisateur updatedUser = utilisateurService.updateUtilisateur(user.getId(), user);
+        // 3) Sauvegarde via le service (il gère l'encodage si nécessaire)
+        Utilisateur updated = utilisateurService.updateUtilisateur(user.getId(), user);
 
-        // Conversion en DTO pour la réponse
-        UtilisateurDTO updatedDTO = new UtilisateurDTO();
-        updatedDTO.setId(updatedUser.getId());
-        updatedDTO.setEmail(updatedUser.getEmail());
-        updatedDTO.setUsername(updatedUser.getUsername());
-        // On n'expose pas le mot de passe
-        return ResponseEntity.ok(updatedDTO);
+        // 4) Préparation de la réponse
+        UtilisateurDTO out = new UtilisateurDTO();
+        out.setId(updated.getId());
+        out.setEmail(updated.getEmail());
+        out.setUsername(updated.getUsername());
+        // pas de password exposé
+        return ResponseEntity.ok(out);
     }
 
     /**
      * Récupère un utilisateur via son identifiant.
-     * Cet endpoint est utile, par exemple, pour pré-remplir
-     * les formulaires d'administration.
+     * Utile pour pré-remplir les formulaires d'administration.
      */
     @GetMapping("/{id}")
     public ResponseEntity<?> getUtilisateurById(@PathVariable Long id) {
-        Optional<Utilisateur> utilisateurOpt = utilisateurService.getUtilisateurById(id);
-        if (utilisateurOpt.isPresent()) {
-            Utilisateur user = utilisateurOpt.get();
-            UtilisateurDTO dto = new UtilisateurDTO();
-            dto.setId(user.getId());
-            dto.setEmail(user.getEmail());
-            dto.setUsername(user.getUsername());
-            // On évite d'exposer le mot de passe pour des raisons de sécurité
-            return ResponseEntity.ok(dto);
-        } else {
+        Optional<Utilisateur> opt = utilisateurService.getUtilisateurById(id);
+        if (opt.isEmpty()) {
             return ResponseEntity.status(HttpStatus.NOT_FOUND)
                     .body("Utilisateur non trouvé.");
         }
+        Utilisateur user = opt.get();
+        UtilisateurDTO dto = new UtilisateurDTO();
+        dto.setId(user.getId());
+        dto.setEmail(user.getEmail());
+        dto.setUsername(user.getUsername());
+        // Mot de passe volontairement non exposé
+        return ResponseEntity.ok(dto);
     }
 }
